Route MIDI clips through instrument plugins during playback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ target_sources(DremCanvas PRIVATE
     src/engine/AudioRecorder.cpp
     src/engine/BounceProcessor.cpp
     src/engine/StepSequencerProcessor.cpp
+    src/engine/MidiClipProcessor.cpp
 
     # Model
     src/model/Project.cpp
