Add MIDI trigger, meters, and Kilohearts Linux support
- MIDI trigger input support (feature/midi-trig)
- Meter display improvements (feature/meters)
- Kilohearts VST plugin installer for Linux
- WINEESYNC=0 for Kilohearts compatibility on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ target_sources(DremCanvas PRIVATE
     src/engine/BounceProcessor.cpp
     src/engine/StepSequencerProcessor.cpp
     src/engine/MidiClipProcessor.cpp
+    src/engine/MeterTapProcessor.cpp
 
     # Model
     src/model/Project.cpp
