Add grid-based region cursor for arrangement vim navigation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ target_sources(DremCanvas PRIVATE
     src/model/TempoMap.cpp
     src/model/StepSequencer.cpp
     src/model/RecentProjects.cpp
+    src/model/GridSystem.cpp
 
     # Plugins
     src/plugins/PluginManager.cpp
