Add unified Clipboard backend for MIDI and audio copy/paste

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ target_sources(DremCanvas PRIVATE
     src/model/Track.cpp
     src/model/AudioClip.cpp
     src/model/MidiClip.cpp
+    src/model/Clipboard.cpp
     src/model/TempoMap.cpp
     src/model/StepSequencer.cpp
     src/model/RecentProjects.cpp
